; ModuleID = '/home/carl/AnghaBench/lede/target/linux/brcm63xx/image/lzma-loader/src/extr_board.c_board_putc.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/brcm63xx/image/lzma-loader/src/extr_board.c_board_putc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@uart_base = common dso_local global i64 0, align 8
@UART_FIFO_REG = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @board_putc(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* @uart_base, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %14

6:                                                ; preds = %1
  %7 = call i32 (...) @wait_xfered()
  %8 = load i64, i64* @uart_base, align 8
  %9 = load i64, i64* @UART_FIFO_REG, align 8
  %10 = add nsw i64 %8, %9
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @WRITEREG(i64 %10, i32 %11)
  %13 = call i32 (...) @wait_xfered()
  br label %14

14:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @wait_xfered(...) #1

declare dso_local i32 @WRITEREG(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
